compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__out_of_range_erlang_float.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "1.8e308"
---
----- SOURCE CODE
1.8e308

----- ERROR
error: Float outside of valid range
  ┌─ /src/one/two.gleam:1:1
  │
1 │ 1.8e308
  │ ^^^^^^^

This float value is too large to be represented by a floating point type:
float values must be in the range -1.7976931348623157e308 -
1.7976931348623157e308.
